feat(genres): add name trimming and transaction improvements